fix|feat(Header|Register): change header z-index + add Register page

--- a/ndl-2023.client/src/styles/register/register.scss
+++ b/ndl-2023.client/src/styles/register/register.scss
@@ -105,3 +105,17 @@ section#register {
         }
     }
 }
+
+@media (max-width: 1450px) {
+    section#register {
+        position: relative;
+        display: block;
+
+        fieldset {
+            position: relative;
+            left: 50%;
+            margin-top: 12%;
+            transform: translateX(-50%);
+        }
+    }
+}
